[gd_scene load_steps=3 format=3 uid="uid://bik1w7m1cohqq"]

[ext_resource type="Script" uid="uid://skjc8o3s2nim" path="res://slay_the_wc/Scenes/End/End.gd" id="1_1jgy3"]
[ext_resource type="VideoStream" uid="uid://c3vp5x1kt38os" path="res://slay_the_wc/Assets/Art/Main_Menu/Victoire vs Fire v1.ogv" id="2_bgdxg"]

[node name="Introduction" type="Node2D"]
script = ExtResource("1_1jgy3")

[node name="SkipScene" type="Button" parent="."]
offset_left = 1317.0
offset_right = 1399.0
offset_bottom = 31.0
text = "Passer >>"

[node name="VideoControl" type="Control" parent="."]
z_index = -11
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="VideoControl"]
z_index = -11
layout_mode = 0
offset_right = 1398.0
offset_bottom = 838.0
mouse_filter = 2
stream = ExtResource("2_bgdxg")
autoplay = true
expand = true

[connection signal="pressed" from="SkipScene" to="." method="_on_skip_scene_pressed"]
[connection signal="finished" from="VideoControl/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
